Fixes - Style - Changed Condition label to Trigger - Made Filterbar stick to the top - Corrected z-Indexes

--- a/src/styles/variables/_zIndexes.scss
+++ b/src/styles/variables/_zIndexes.scss
@@ -1,4 +1,5 @@
 :root {
+  --z-toolbar: 10;
   --z-topbar: 20;
-  --z-navbar: 10;
+  --z-navbar: 15;
 }
